--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,13 +43,13 @@ p.intro {
   line-height: 24px;
 }
 a {
-  color: #608dfd;
+  color: #fff;
   font-weight: 400;
 }
 a:hover,
 a:focus {
   text-decoration: none;
-  color: #608dfd;
+  color: #fff;
 }
 ul,
 ol {
@@ -317,7 +317,7 @@ header .intro-text {
   content: "\f00c";
   font-family: "FontAwesome";
   color: #5ca9fb;
-  font-size: 11px;
+  font-size: 20px;
   font-weight: 300;
   padding-right: 8px;
 }
@@ -332,6 +332,20 @@ header .intro-text {
   line-height: 24px;
   margin: 30px 0;
 }
+@media (max-width: 640px) { /* Mobile breakpoint */
+  #about .about-text h2 {
+    text-align: center !important;
+  }
+}
+@media (max-width: 640px) {
+  #about .about-text h2::after {
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+  }
+}
+
 /* Services Section */
 #services {
   padding: 150px 0;
@@ -410,6 +424,7 @@ header .intro-text {
 }
 
 #portfolio .portfolio-items img {
+  margin-bottom: 40px;
   width: 1450px !important;      /* Always fills the container */
   height: auto !important;     /* Keeps aspect ratio */
   max-width: 1250px !important; /* Limit on larger screens */
@@ -422,6 +437,28 @@ header .intro-text {
   #portfolio .portfolio-items img {
     max-width: 100% !important; /* Full width on small screens */
   }
+}
+
+
+/* View Promotion Button */
+.btn-gallery {
+  display: inline-block;
+  padding: 10px 24px;
+  background:#00b5b5;
+  color: #fff !important;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 25px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  transition: all 0.3s ease;
+  text-decoration: none !important;
+}
+
+.btn-gallery:hover {
+  background:#000;
+  transform: scale(1.05);
+  color: #fff !important;
 }
 
 
